--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -451,25 +451,26 @@
                         ZIndex: =5
 
             Container2_6 As groupContainer.horizontalAutoLayoutContainer:
+                AlignInContainer: =AlignInContainer.SetByContainer
                 BorderColor: =RGBA(214, 221, 224, 1)
                 BorderThickness: =0.5
                 DropShadow: =DropShadow.Light
-                FillPortions: =0
                 Height: =40
-                LayoutAlignItems: =LayoutAlignItems.Center
+                LayoutAlignItems: =LayoutAlignItems.Stretch
+                LayoutDirection: =LayoutDirection.Vertical
+                LayoutGap: =5
                 LayoutJustifyContent: =LayoutJustifyContent.SpaceBetween
                 LayoutMinHeight: =100
                 LayoutMinWidth: =250
                 LayoutMode: =LayoutMode.Auto
-                PaddingLeft: =20
-                PaddingRight: =20
+                PaddingLeft: =10
+                PaddingRight: =10
                 Width: =Max(App.Width, App.MinScreenWidth)
                 ZIndex: =3
 
                 TextCanvas2 As Text:
                     AutoHeight: =true
                     DisplayMode: =DisplayMode.Edit
-                    FillPortions: =1
                     Height: =32
                     LayoutMinHeight: =32
                     LayoutMinWidth: =96
@@ -481,147 +482,146 @@
                     Y: =0
                     ZIndex: =1
 
-            "NabavniNalogLines_1 As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver5.0'":
-                AlignInContainer: =AlignInContainer.SetByContainer
-                BorderColor: =App.Theme.Colors.Darker40
-                Default: |
-                    =First(Filter(purchaseCollection, Line_No = scannedItem))
-                DelayItemLoading: =true
-                Fill: =RGBA(237, 237, 237, 1)
-                Height: =562
-                Items: =purchaseCollection
-                Layout: =Layout.Vertical
-                LayoutMinHeight: =Self.TemplateHeight * Self.AllItemsCount
-                LayoutMinWidth: =320
-                LoadingSpinner: =LoadingSpinner.Data
-                OnSelect: |-
-                    =UpdateContext({wizardStep:2});
-                TemplatePadding: =0
-                TemplateSize: =198
-                Visible: =wizardStep = 1
-                Width: =Parent.Width
-                Y: =49
-                ZIndex: =4
-
-                Separator6_6 As rectangle:
+                "NabavniNalogLines_1 As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver5.0'":
+                    AlignInContainer: =AlignInContainer.SetByContainer
                     BorderColor: =App.Theme.Colors.Darker40
-                    Fill: =RGBA(255, 255, 255, 1)
-                    Height: =8
-                    OnSelect: =Select(Parent)
-                    Width: =Parent.TemplateWidth
-                    Y: =Parent.TemplateHeight - Self.Height
-                    ZIndex: =5
+                    Default: =First(Filter(Self.AllItems, Line_No = scannedItem))
+                    DelayItemLoading: =true
+                    Fill: =RGBA(237, 237, 237, 1)
+                    Height: =562
+                    Items: =colLines
+                    Layout: =Layout.Vertical
+                    LayoutMinHeight: =Self.TemplateHeight * Self.AllItemsCount
+                    LayoutMinWidth: =320
+                    LoadingSpinner: =LoadingSpinner.Data
+                    OnSelect: |-
+                        =UpdateContext({wizardStep:2});
+                    TemplatePadding: =0
+                    TemplateSize: =198
+                    Visible: =wizardStep = 1
+                    Width: =Parent.Width
+                    Y: =49
+                    ZIndex: =2
 
-                Rectangle5_3 As rectangle:
-                    BorderColor: =App.Theme.Colors.Darker40
-                    Fill: =App.Theme.Colors.Darker30
-                    Height: =Parent.TemplateHeight - Separator6_6.Height
-                    OnSelect: =Select(Parent)
-                    Visible: =ThisItem.IsSelected
-                    Width: =4
-                    ZIndex: =6
-
-                Group2_4 As group:
-                    Height: =5
-                    Width: =5
-                    X: =40
-                    Y: =40
-                    ZIndex: =14
-
-                    Title5_3 As label:
-                        Color: =RGBA(50, 49, 48, 1)
-                        DisabledColor: =RGBA(166, 166, 166, 1)
-                        Font: =App.Theme.Font
-                        FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                        Height: =22
+                    Separator6_6 As rectangle:
+                        BorderColor: =App.Theme.Colors.Darker40
+                        Fill: =RGBA(255, 255, 255, 1)
+                        Height: =8
                         OnSelect: =Select(Parent)
-                        PaddingBottom: =0
-                        PaddingLeft: =20
-                        PaddingRight: =20
-                        PaddingTop: =0
-                        Size: =12
-                        Text: |-
-                            ="Br. artikla:   " & ThisItem.Item_No
-                        VerticalAlign: =VerticalAlign.Top
-                        Width: =Parent.Width
-                        Y: =18
-                        ZIndex: =1
+                        Width: =Parent.TemplateWidth
+                        Y: =Parent.TemplateHeight - Self.Height
+                        ZIndex: =5
 
-                    Subtitle4_3 As label:
-                        Color: =RGBA(0, 0, 0, 1)
-                        DisabledColor: =RGBA(166, 166, 166, 1)
-                        Font: =App.Theme.Font
-                        FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                        Height: =22
+                    Rectangle5_3 As rectangle:
+                        BorderColor: =App.Theme.Colors.Darker40
+                        Fill: =App.Theme.Colors.Darker30
+                        Height: =Parent.TemplateHeight - Separator6_6.Height
                         OnSelect: =Select(Parent)
-                        PaddingBottom: =0
-                        PaddingLeft: =20
-                        PaddingRight: =20
-                        PaddingTop: =0
-                        Size: =12
-                        Text: |-
-                            ="Kategorija artikla:   " & ThisItem.Posting_Group
-                        VerticalAlign: =VerticalAlign.Top
-                        Width: =Parent.Width
-                        Y: =52
-                        ZIndex: =2
+                        Visible: =ThisItem.IsSelected
+                        Width: =1
+                        ZIndex: =6
 
-                    Body1_10 As label:
-                        Color: =RGBA(0, 0, 0, 1)
-                        DisabledColor: =RGBA(166, 166, 166, 1)
-                        Font: =App.Theme.Font
-                        FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                        Height: =18
-                        OnSelect: =Select(Parent)
-                        PaddingBottom: =0
-                        PaddingLeft: =20
-                        PaddingRight: =20
-                        PaddingTop: =0
-                        Size: =12
-                        Text: |-
-                            ="Količina:    " & ThisItem.Quantity
-                        VerticalAlign: =VerticalAlign.Top
-                        Width: =Parent.Width
-                        Y: =121
-                        ZIndex: =3
+                    Group2_4 As group:
+                        Height: =5
+                        Width: =5
+                        X: =40
+                        Y: =40
+                        ZIndex: =14
 
-                    Body1_11 As label:
-                        Color: =RGBA(0, 0, 0, 1)
-                        DisabledColor: =RGBA(166, 166, 166, 1)
-                        Font: =App.Theme.Font
-                        FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                        Height: =22
-                        OnSelect: =Select(Parent)
-                        PaddingBottom: =0
-                        PaddingLeft: =20
-                        PaddingRight: =20
-                        PaddingTop: =0
-                        Size: =12
-                        Text: |-
-                            ="Jedinica mjere:    " & ThisItem.Unit_Of_Measure
-                        VerticalAlign: =VerticalAlign.Top
-                        Width: =Parent.Width
-                        Y: =153
-                        ZIndex: =8
+                        Title5_3 As label:
+                            Color: =RGBA(50, 49, 48, 1)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
+                            FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                            Height: =22
+                            OnSelect: =Select(Parent)
+                            PaddingBottom: =0
+                            PaddingLeft: =20
+                            PaddingRight: =20
+                            PaddingTop: =0
+                            Size: =12
+                            Text: |-
+                                ="Br. artikla:   " & ThisItem.Item_No
+                            VerticalAlign: =VerticalAlign.Top
+                            Width: =1
+                            Y: =18
+                            ZIndex: =1
 
-                    Body1_8 As label:
-                        Color: =RGBA(0, 0, 0, 1)
-                        DisabledColor: =RGBA(166, 166, 166, 1)
-                        Font: =App.Theme.Font
-                        FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                        Height: =22
-                        OnSelect: =Select(Parent)
-                        PaddingBottom: =0
-                        PaddingLeft: =20
-                        PaddingRight: =20
-                        PaddingTop: =0
-                        Size: =12
-                        Text: |-
-                            ="Naziv artikla:   " & ThisItem.Description
-                        VerticalAlign: =VerticalAlign.Top
-                        Width: =Parent.Width
-                        Y: =87
-                        ZIndex: =10
+                        Subtitle4_3 As label:
+                            Color: =RGBA(0, 0, 0, 1)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
+                            FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                            Height: =22
+                            OnSelect: =Select(Parent)
+                            PaddingBottom: =0
+                            PaddingLeft: =20
+                            PaddingRight: =20
+                            PaddingTop: =0
+                            Size: =12
+                            Text: |-
+                                ="Kategorija artikla:   " & ThisItem.Posting_Group
+                            VerticalAlign: =VerticalAlign.Top
+                            Width: =1
+                            Y: =52
+                            ZIndex: =2
+
+                        Body1_10 As label:
+                            Color: =RGBA(0, 0, 0, 1)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
+                            FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                            Height: =18
+                            OnSelect: =Select(Parent)
+                            PaddingBottom: =0
+                            PaddingLeft: =20
+                            PaddingRight: =20
+                            PaddingTop: =0
+                            Size: =12
+                            Text: |-
+                                ="Količina:    " & ThisItem.Quantity
+                            VerticalAlign: =VerticalAlign.Top
+                            Width: =1
+                            Y: =121
+                            ZIndex: =3
+
+                        Body1_11 As label:
+                            Color: =RGBA(0, 0, 0, 1)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
+                            FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                            Height: =22
+                            OnSelect: =Select(Parent)
+                            PaddingBottom: =0
+                            PaddingLeft: =20
+                            PaddingRight: =20
+                            PaddingTop: =0
+                            Size: =12
+                            Text: |-
+                                ="Jedinica mjere:    " & ThisItem.Unit_Of_Measure
+                            VerticalAlign: =VerticalAlign.Top
+                            Width: =1
+                            Y: =153
+                            ZIndex: =8
+
+                        Body1_8 As label:
+                            Color: =RGBA(0, 0, 0, 1)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
+                            FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                            Height: =22
+                            OnSelect: =Select(Parent)
+                            PaddingBottom: =0
+                            PaddingLeft: =20
+                            PaddingRight: =20
+                            PaddingTop: =0
+                            Size: =12
+                            Text: |-
+                                ="Naziv artikla:   " & ThisItem.Description
+                            VerticalAlign: =VerticalAlign.Top
+                            Width: =1
+                            Y: =87
+                            ZIndex: =10
 
             Spinner2_1 As Spinner:
                 AlignInContainer: =AlignInContainer.Stretch
